syntax = "proto3";

package signatrust;


// The Signatrust service definition.
service Signatrust {
  rpc SignStream(stream SignStreamRequest) returns (SignStreamResponse) {};
}

message SignStreamRequest {
  bytes data = 1;
  string key_id = 2;
}

message SignStreamResponse {
  string signature = 1;
  int32 error_code = 2;
}

